login screen commit

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="pathak.com.uidesigning.MainActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/image1"/>
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,7 +34,7 @@
                 android:text="Login"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/login_edittext_vertical_margin"
-               android:textColor="@android:color/black"
+                android:textColor="@android:color/black"
                 android:textSize="22sp"
                 android:layout_marginBottom="@dimen/login_edittext_vertical_margin"
                 android:layout_marginRight="@dimen/login_edittext_horizontal_margin"
@@ -38,7 +43,7 @@
                 android:paddingBottom="@dimen/login_edittext_vertical_margin"/>
               <EditText
                 android:layout_width="match_parent"
-               android:layout_height="wrap_content"
+                android:layout_height="wrap_content"
                 android:inputType="text"
                 android:hint="Username"
                 style="@style/Loginbtnstyle"
