--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="pathak.com.uidesigning.MainActivity">
+    android:layout_height="match_parent">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,12 +16,13 @@
         android:background="@android:color/white"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="Sign Up"
             android:layout_gravity="center"
             android:layout_margin="@dimen/login_edittext_vertical_margin"
             android:textColor="@android:color/black"
@@ -37,6 +32,20 @@
             android:layout_marginLeft="@dimen/login_edittext_horizontal_margin"
             android:layout_marginTop="@dimen/login_edittext_vertical_margin"
             android:paddingBottom="@dimen/login_edittext_vertical_margin"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:hint="Name"
+            style="@style/Loginbtnstyle"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_margin="@dimen/login_edittext_vertical_margin"
+            android:layout_marginBottom="@dimen/login_edittext_vertical_margin"
+            android:layout_marginRight="@dimen/login_edittext_horizontal_margin"
+            android:layout_marginLeft="@dimen/login_edittext_horizontal_margin"
+            android:layout_marginTop="@dimen/login_edittext_vertical_margin"
+            />
 
         <EditText
             android:layout_width="match_parent"
@@ -65,10 +74,24 @@
             android:layout_marginLeft="@dimen/login_edittext_horizontal_margin"
             android:layout_marginTop="@dimen/login_edittext_vertical_margin" />
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="Confirm Password"
+            style="@style/Loginbtnstyle"
+            android:layout_margin="@dimen/login_edittext_vertical_margin"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_marginBottom="@dimen/login_edittext_vertical_margin"
+            android:layout_marginRight="@dimen/login_edittext_horizontal_margin"
+            android:layout_marginLeft="@dimen/login_edittext_horizontal_margin"
+            android:layout_marginTop="@dimen/login_edittext_vertical_margin" />
+
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="Sign Up"
             android:layout_margin="@dimen/login_edittext_vertical_margin"
             style="@style/Buttonstyle"
             android:layout_marginBottom="@dimen/login_edittext_vertical_margin"
@@ -85,26 +108,11 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="Sign Up"
+                android:text="Already a user? Login"
                 android:textColor="@color/colorPrimary"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_margin="@dimen/login_edittext_vertical_margin"
                 android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/login_edittext_vertical_margin"
-                android:layout_marginRight="@dimen/login_edittext_horizontal_margin"
-                android:layout_marginLeft="@dimen/login_edittext_horizontal_margin"
-                android:layout_marginTop="@dimen/login_edittext_vertical_margin"
-                />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="Forgot Password?"
-                android:textColor="@color/colorPrimary"
-                android:layout_gravity="center_vertical"
-                android:gravity="right"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_marginBottom="@dimen/login_edittext_vertical_margin"
                 android:layout_marginRight="@dimen/login_edittext_horizontal_margin"
                 android:layout_marginLeft="@dimen/login_edittext_horizontal_margin"
